Added game page

--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
 <body id="titlepage">
 
     <div class="title"></div>
-    <section class="bg"></section>
+    <section class="bg" id="backg"></section>
     <p>press 'enter' to play</p>
-
-
-    <!--<section class="bg"></section>
-    <div class="loading-text">0%</div></!-->
 
     <script src="script.js"></script>
 </body>
