Added info icons to game page

--- a/game.html
+++ b/game.html
@@ -16,8 +16,46 @@
             </div>
         </a>
     </div>
-    <div class="game"></div>
-
+    <div class="game">
+        <div class="info">
+            <img src="assets/info.png" alt="More Info">
+        </div>
+        <div class="infoa">
+            <img src="assets/infoarrow.png" alt="Info Arrow">
+        </div>
+        <div class="tea">
+            <a href="https://www.healthline.com/nutrition/tea-for-cramps">
+                <img src="assets/tea.png" alt="Tea">
+            </a>
+        </div>
+        <div class="water">
+            <a
+                href="https://www.healthshots.com/intimate-health/menstruation/4-things-that-happen-when-you-dont-drink-enough-water-on-your-periods/">
+                <img src="assets/water.png" alt="Water">
+            </a>
+        </div>
+        <div class="food">
+            <a
+                href="https://elara.care/nutrition/nutrition-for-the-different-phases-of-the-menstrual-cycle/#:~:text=Often%20women%20feel%20less%20hungry,recommended%20to%20consume%20more%20calories">
+                <img src="assets/food.png" alt="Food">
+            </a>
+        </div>
+        <div class="choc">
+            <a href="https://www.healthline.com/health/period-cravings">
+                <img src="assets/choc.png" alt="Dark Chocolate">
+            </a>
+        </div>
+        <div class="exercise">
+            <a href="https://www.healthline.com/health/exercise-during-period#benefits">
+                <img src="assets/exercise.png" alt="Exercise">
+            </a>
+        </div>
+        <div class="sleep">
+            <a href="https://www.sleephealthfoundation.org.au/pdfs/Menstrual-Cycle-and-Sleep.pdf">
+                <img src="assets/sleep.png" alt="Sleep">
+            </a>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
