Fixed icon spacing

--- a/game.html
+++ b/game.html
@@ -20,9 +20,6 @@
         <div class="info">
             <img src="assets/info.png" alt="More Info">
         </div>
-        <div class="infoa">
-            <img src="assets/infoarrow.png" alt="Info Arrow">
-        </div>
         <div class="tea">
             <a href="https://www.healthline.com/nutrition/tea-for-cramps">
                 <img src="assets/tea.png" alt="Tea">
@@ -57,6 +54,7 @@
         </div>
     </div>
 
+    <audio autoplay loop src="audio/music.mp3"></audio>
     <script src="script.js"></script>
 </body>
 
