Added controls for the music

--- a/game.html
+++ b/game.html
@@ -154,7 +154,7 @@
         </script>
     </div>
 
-    <audio autoplay loop src="audio/music.mp3"></audio>
+    <audio controls autoplay loop src="audio/music.mp3"></audio>
     <script src="script.js"></script>
 </body>
 
