--- a/game.html
+++ b/game.html
@@ -154,9 +154,9 @@
         </script>
         <script>
             var audio = document.getElementById("myaudio");
-            audio.volume = 0.5;
+            audio.volume = 0.2;
         </script>
-        <audio control autoplay loop src="audio/music.mp3" id="myaudio"></audio>
+        <audio autoplay loop src="audio/music.mp3" id="myaudio"></audio>
         <script src="script.js"></script>
 </body>
 
