--- a/game.html
+++ b/game.html
@@ -58,7 +58,7 @@
 
         </div>
         <div id="unity-container" class="unity-desktop">
-            <canvas id="unity-canvas" width=700px height=500></canvas>
+            <canvas id="unity-canvas"></canvas>
             <div id="unity-loading-bar">
                 <div id="unity-logo"></div>
                 <div id="unity-progress-bar-empty">
@@ -69,7 +69,7 @@
             <div id="unity-footer">
                 <div id="unity-webgl-logo"></div>
                 <div id="unity-fullscreen-button"></div>
-                <div id="unity-build-title">AthenaHacks</div>
+                <div id="unity-build-title">Period Pal</div>
             </div>
         </div>
         <script>
@@ -152,6 +152,14 @@
             };
             document.body.appendChild(script);
         </script>
+
+        <audio autoplay loop id="myaudio" src="audio/music.mp3">
+        </audio>
+        <script>
+            var audio = document.getElementById("myaudio");
+            audio.volume = 0.02;
+        </script>
+
 
         <script src="script.js"></script>
 </body>
